--- a/001/web/_css/estilo.css
+++ b/001/web/_css/estilo.css
@@ -3,7 +3,7 @@
 	padding: 0px;
 	margin: 0px;
 	font-family: verdana;
-	font-size: 1em;
+	font-size: 0.95em;
 }
 
 h1
@@ -44,4 +44,9 @@ form.login input
 form.login input[type="text"], form.login input[type="password"]
 {
 	margin-bottom: 15px;
+}
+
+.encabezado div
+{
+	display: inline-block;
 }
