--- a/001/app/Resources/views/cliente/editar.html.twig
+++ b/001/app/Resources/views/cliente/editar.html.twig
@@ -2,16 +2,5 @@
 
 {% block body %}
     <h1>Cliente</h1>
-    <form action="" method="post" class="login">
-		<label for="_rut">Rut</label>
-		<input id="_rut" type="text" name="_rut" value="{{ cliente.datos.rut }}" style="width:{{ cliente.tabCliente[0] }}px" />
-		<label for="_nombre">Nombre</label>
-		<input id="_nombre" type="text" name="_nombre" value="{{ cliente.datos.nombre }}" style="width:{{ cliente.tabCliente[1] }}px" />
-		<label for="_direccion">Dirección</label>
-		<input id="_direccion" type="text" name="_direccion" value="{{ cliente.datos.direccion }}" style="width:{{ cliente.tabCliente[2] }}px" />
-		<label for="_comuna">Comuna</label>
-		<input id="_comuna" type="text" name="_comuna" value="{{ cliente.datos.comuna }}" style="width:{{ cliente.tabCliente[3] }}px" />
-		<br>
-		<input type="submit" value="Registrar" style="width:80px" />
-	</form>
+    {{ form(form) }}
 {% endblock %}
