--- a/001/app/Resources/views/base.html.twig
+++ b/001/app/Resources/views/base.html.twig
@@ -2,12 +2,50 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <title>{% block title %}Proyecto N°6{% endblock %}</title>
+        <style>
+            div.container {
+                width: 100%;
+            }
+            header {
+                background-color: lightblue;
+                text-align: center;
+                padding: 1em;
+            }
+            nav {
+                float: left;
+                max-width: 160px;
+                margin: 0;
+                padding: 1em;
+                background-color: beige;
+                height: 500px;
+            }
+            nav ul {
+                list-style-type: none;
+                padding: 0;
+            }
+            nav ul a {
+                text-decoration: none;
+            }
+            article {
+                padding: 1em;
+                background-color: lightgreen;
+                height: 500px;
+            }
+        </style>
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <div class="container">
+            <header>
+                {% block header %}{% endblock %}
+            </header>
+            <nav>
+                {% block nav %}
+                    {% include 'menu.html.twig' %}
+                {% endblock %}
+            </nav>
+            <article>{% block article %}{% endblock %}</article>
+        </div>
     </body>
 </html>
