--- a/001/src/Gibson/ClienteBundle/Resources/views/Default/agregar.html.twig
+++ b/001/src/Gibson/ClienteBundle/Resources/views/Default/agregar.html.twig
@@ -1,2 +1,2 @@
 {% extends 'GibsonClienteBundle:Default:_header.html.twig' %}
-{% block article %}Portada{% endblock %}
+{% block article %}Agregar{% endblock %}
